# PolyBenchC-4.2.1

./: CMakeLists.txt  build.sh
datamining/covariance/: covariance-tbb.cpp  covariance.c
linear-algebra/blas/gemm/: gemm.c
linear-algebra/blas/gesummv/: gesummv.c
linear-algebra/blas/syr2k/: syr2k-tbb.cpp  syr2k.c
linear-algebra/blas/syrk/: syrk.c
linear-algebra/kernels/2mm/: 2mm-tbb.cpp  2mm.c
linear-algebra/kernels/3mm/: 3mm.c
linear-algebra/solvers/trisolv/: trisolv.c
medley/floyd-warshall/: floyd-warshall.c
stencils/heat-3d/: heat-3d-tbb.cpp
